5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1822_1646.log
== TEST (2019-06-13 11:02:05) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c
-- ERROR:
File "XXXX", line 9
    
           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:02:10) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:02:23) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:03:25) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c)

vet = zeros(c, dtype=int)

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:03:30) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c)

vet = zeros(c, dtype=int)

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:07:31) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c)

vet = zeros(c, dtype=int)
x = 0

for i in range(size(saque)):
	if(saque[i] <= 50):
		x = i
		vet[x] = i
		x = x + 1
		
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:07:58) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c)

vet = zeros(c, dtype=int)
x = 0

for i in range(size(saque)):
	if(saque[i] <= 50):
		x = i
		vet[x] = i
		x = x + 1
		
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:08:33) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c)

vet = zeros(c, dtype=int)
x = 0

for i in range(size(saque)):
	if(saque[i] <= 50):
		x = i

print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:10:22) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c)

vet = zeros(c, dtype=int)
x = 0
y = 0 
for i in range(size(saque)):
	if(saque[i] <= 50):
		x = i
		vet[y] = vet[y] + x

print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:10:30) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c)

vet = zeros(c, dtype=int)
x = 0
y = 0 
for i in range(size(saque)):
	if(saque[i] <= 50):
		x = i
		vet[y] = vet[y] + x
		y = y + 1

print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:10:39) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c)

vet = zeros(c, dtype=int)
x = 0
y = 0 
for i in range(size(saque)):
	if(saque[i] <= 50):
		x = i
		vet[y] = vet[y] + x
		y = y + 1

print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:10:58) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c)

vet = zeros(c, dtype=int)
x = 0
y = 0 
for i in range(size(saque)):
	if(saque[i] <= 50):
		x = i
		vet[y] = vet[y] + x
		y = y + 1

print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:11:05) 
-- CODE:
from numpy import *
saque = array(eval(input("Valores dos saques: ")))
c = 0
for x in saque:
	if (x <= 50):
		c = c + 1
		
print(c)

vet = zeros(c, dtype=int)
x = 0
y = 0 
for i in range(size(saque)):
	if(saque[i] <= 50):
		x = i
		vet[y] = vet[y] + x
		y = y + 1

print(vet)
		
-- EXECUTION TIME:
0.994415
-- TEST CASE 1:
---- input:
[50,250,120,1350,265,42]
---- correct output:
2
[0 5]
---- user output:
2
[0 5]
-- TEST CASE 2:
---- input:
[200,100,151,320,115]

---- correct output:
0
[]
---- user output:
0
[]
-- TEST CASE 3:
---- input:
[50,51,52,53,55,191]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
